crates/runtime/tests/models/snapshots/integration_models__models__embedding__cohere-english_single_text_float.snap
---
source: crates/runtime/tests/models/embedding.rs
expression: normalize_embeddings_response(response)
---
{
  "data": [
    {
      "embedding": "array_1024_items",
      "index": 0,
      "object": "embedding"
    }
  ],
  "model": "cohere-english",
  "object": "list",
  "usage": {
    "prompt_tokens": 9,
    "total_tokens": 9
  }
}
