crates/runtime/tests/models/snapshots/integration_models__models__embedding__cohere-multilingual_french_text_float.snap
---
source: crates/runtime/tests/models/embedding.rs
expression: normalize_embeddings_response(response)
---
{
  "data": [
    {
      "embedding": "array_1024_items",
      "index": 0,
      "object": "embedding"
    }
  ],
  "model": "cohere-multilingual",
  "object": "list",
  "usage": {
    "prompt_tokens": 5,
    "total_tokens": 5
  }
}
