crates/runtime/tests/models/snapshots/integration_models__models__embedding__cohere-multilingual_multilingual_texts_float.snap
---
source: crates/runtime/tests/models/embedding.rs
expression: normalize_embeddings_response(response)
---
{
  "data": [
    {
      "embedding": "array_1024_items",
      "index": 0,
      "object": "embedding"
    },
    {
      "embedding": "array_1024_items",
      "index": 1,
      "object": "embedding"
    },
    {
      "embedding": "array_1024_items",
      "index": 2,
      "object": "embedding"
    }
  ],
  "model": "cohere-multilingual",
  "object": "list",
  "usage": {
    "prompt_tokens": 13,
    "total_tokens": 13
  }
}
