crates/runtime/tests/models/snapshots/integration_models__models__embedding__hf_e5_basic.snap
---
source: crates/runtime/tests/models/embedding.rs
expression: normalize_embeddings_response(response)
---
{
  "data": [
    {
      "embedding": "array_384_items",
      "index": 0,
      "object": "embedding"
    }
  ],
  "model": "hf_e5",
  "object": "list",
  "usage": {
    "prompt_tokens": 12,
    "total_tokens": 12
  }
}
