crates/runtime/tests/models/snapshots/integration_models__models__embedding__hf_minilm_alpha_array_integer_array.snap
---
source: crates/runtime/tests/models/embedding.rs
expression: normalize_embeddings_response(response_raw)
---
{
  "data": [
    {
      "embedding": "array_384_items",
      "index": 0,
      "object": "embedding"
    },
    {
      "embedding": "array_384_items",
      "index": 1,
      "object": "embedding"
    }
  ],
  "model": "hf_minilm",
  "object": "list",
  "usage": {
    "prompt_tokens": 256,
    "total_tokens": 256
  }
}
